--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "antd": "^3.15.2",
     "axios": "^0.18.0",
+    "minireset.css": "^0.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-mixin": "^5.0.0",
